[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garak-quickstart-demo"
version = "0.2.0"
description = "Garak security scanning demo on Kubeflow Pipelines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-stack-provider-trustyai-garak>=0.4.0"
]

[tool.setuptools.packages.find]
include = ["garak_pipeline*"]
exclude = ["reports*", "examples*", "tests*"]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
]
